<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clipChildren="false"
  android:clipToPadding="false">

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/playerBottomAdjustment"
    android:id="@+id/ytp_player_view"
    >

    <com.github.vkay94.dtpv.youtube.YouTubeOverlay
      android:id="@+id/ytp_skip_overlay"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/controlsOverlayColor"
      android:visibility="invisible" />

    <FrameLayout
      android:id="@+id/ytp_controls_overlay"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="invisible"
      android:background="@color/controlsOverlayColor"/>

    <include layout="@layout/info_seeking_view"/>

    <ImageView
      android:id="@+id/ytp_thumbnail"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="fitXY"
      android:contentDescription="Video Thumbnail" />

    <TextView
      android:id="@+id/ytp_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:visibility="invisible"
      android:textColor="@android:color/white"
      tools:visibility="visible"
      android:text="This is the placeholder for info text"
      android:background="@drawable/bg_info_view"
      android:layout_marginTop="15dp"
      android:layout_gravity="center|top">
    </TextView>


    <FrameLayout
      android:id="@+id/ytp_controls"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/controlsOverlayColor">

      <!-- TOP ROW (toolbar) -->
      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ytp_control_section_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp">

        <LinearLayout
          android:id="@+id/ytp_control_section_top_left"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="start|center_vertical"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent">
          <ImageButton
            android:id="@+id/ytp_back"
            style="@style/PlayerIcon"
            android:src="@drawable/ic_player_back"
            android:contentDescription="@string/icon_name_back" />
        </LinearLayout>

        <TextView
          android:id="@+id/ytp_video_title"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toEndOf="@id/ytp_control_section_top_left"
          app:layout_constraintEnd_toStartOf="@id/ytp_control_section_top_right"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:visibility="invisible"
          android:textColor="@android:color/white"
          android:layout_gravity="center_vertical|end"
          android:singleLine="true"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          tools:visibility="visible"
          android:ellipsize="end"
          android:maxLines="1"
          android:textSize="18sp"
          android:textStyle="normal"
          android:text="This is a placeholder video title to test long titles">
        </TextView>

        <LinearLayout
          android:id="@+id/ytp_control_section_top_right"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="end|center_vertical"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent">
          <ImageButton
            android:id="@+id/ytp_quality"
            style="@style/PlayerIcon"
            android:src="@drawable/ic_player_hd"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/icon_name_quality" />
          <ImageButton
            android:id="@+id/ytp_speed"
            style="@style/PlayerIcon"
            android:src="@drawable/ic_player_1x"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/icon_name_speed" />
          <ImageButton
            android:id="@+id/ytp_settings"
            style="@style/PlayerIcon"
            android:src="@drawable/ic_player_settings"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/icon_name_settings" />
        </LinearLayout>
      </androidx.constraintlayout.widget.ConstraintLayout>

      <!-- CENTER ROW -->
      <LinearLayout
        android:id="@+id/ytp_control_section_middle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:baselineAligned="false">

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center_vertical"
          android:layout_weight="1">

          <ImageButton
            android:id="@+id/ytp_prev"
            style="@style/PlayerIcon"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_player_previous"
            android:contentDescription="@string/icon_name_previous" />
        </FrameLayout>

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center_vertical"
          android:layout_weight="1">
          <ImageButton
            android:id="@+id/ytp_play"
            style="@style/PlayerIcon"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_name_play" />
          <ImageButton
            android:id="@+id/ytp_replay"
            style="@style/PlayerIcon"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:src="@drawable/ic_player_replay"
            android:contentDescription="@string/icon_name_reply" />
        </FrameLayout>

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center_vertical"
          android:layout_weight="1">
          <ImageButton
            android:id="@+id/ytp_next"
            style="@style/PlayerIcon"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_player_next"
            android:contentDescription="@string/icon_name_next" />
        </FrameLayout>
      </LinearLayout>

      <!-- BOTTOM ROW -->
      <FrameLayout
        android:id="@+id/ytp_control_section_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="@dimen/controlsBottomMarginNormal"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center_vertical|end">

          <TextView android:id="@id/exo_position"
            style="@style/PlayerTimestamp"/>

          <TextView
            style="@style/PlayerTimestamp"
            android:text="@string/text_slash" />

          <TextView android:id="@id/exo_duration"
            style="@style/PlayerTimestamp"/>
        </LinearLayout>

        <ImageButton
          android:id="@+id/ytp_fullscreen"
          style="@style/PlayerIcon"
          android:contentDescription="@string/icon_name_back"
          android:src="@drawable/ic_player_fullscreen" />
      </FrameLayout>
    </FrameLayout>


    <ProgressBar android:id="@+id/ytp_loader"
      android:layout_width="75dp"
      android:layout_height="75dp"
      android:layout_gravity="center"
      android:background="@android:color/transparent"
      android:indeterminateTintMode="src_atop"
      android:indeterminateTint="@color/exo_white"
      style="?android:attr/progressBarStyle"/>

    <com.google.android.exoplayer2.ui.DefaultTimeBar
      android:id="@+id/exo_progress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginStart="-8dp"
      android:layout_marginEnd="-8dp"
      android:layout_marginBottom="@dimen/playerSeekbarAdjustment"
      android:background="@android:color/transparent"
      app:unplayed_color="@color/unPlayedColor"
      app:buffered_color="@color/bufferedColor"
      />

  </FrameLayout>
</FrameLayout>
